# amnshield-firewall

./: FAQ-de.txt  FAQ.md  NetBlock.code-workspace  README.md  TESTING_GUIDE.md  build_output.txt  gradle.properties  install-netblock.ps1  update_icon.ps1  update_icon_run.ps1
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/netblock/: ActivityDns.java  ActivityFAQ.java  ActivityForwardApproval.java  ActivityForwarding.java  ActivityHelp.java  ActivityLog.java  ActivityMain.java  ActivityPro.java  ActivitySettings.java  AdapterAccess.java  AdapterDns.java  AdapterForwarding.java  AdapterLog.java  AdapterRule.java  Allowed.java  AmnShieldSyncReceiver.java  AmnShieldSyncService.java  ApplicationEx.java  DatabaseHelper.java  DownloadTask.java  ExpandedListView.java  Forward.java  FragmentSettings.java  GlideHelper.java  IAB.java  IPUtil.java  Packet.java  PasswordDialog.java  PasswordHelper.java  PendingIntentCompat.java  ReceiverAutostart.java  ReceiverPackageRemoved.java  ResourceRecord.java  Rule.java  Schedule.java  ScheduleManager.java  ServiceExternal.java  ServiceSinkhole.java  ServiceTileFilter.java  ServiceTileGraph.java  (+9 more)
app/src/main/jni/netblock/: dhcp.c  dns.c  icmp.c  ip.c  netblock.c  netblock.h  pcap.c  session.c  tcp.c  tls.c  udp.c  util.c
app/src/main/res/layout/: rule.xml
app/src/main/res/menu/: forwarding.xml  logging.xml  main.xml
app/src/main/res/values-ar-rSA/: strings.xml
app/src/main/res/values-az-rAZ/: strings.xml
app/src/play/: AndroidManifest.xml
playstore/: PLAY-es.md  (+4 more)
(+57 files in other folders)
